--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
+    "@tanstack/react-query": "^5.75.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,12 +24,15 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
     "simple-icons": "^14.12.1",
+    "spotify-web-api-js": "^1.5.2",
+    
     "web-vitals": "^2.1.4"
   },
   "scripts": {
